--- a/example.env
+++ b/example.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+DATABASE_URL=your_supabase_url
 JWT_SECRET=your_jwt_secret
+MY_URL=your_url
